<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10.0dip" >

        <RelativeLayout
            android:id="@+id/imageWrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/image"
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/soft_grey"
                android:scaleType="fitCenter" />
            <TextView
                android:id="@+id/plus_photo"
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClickPlusPhoto"
                android:text="@string/plus_photo"
                android:textAppearance="?android:textAppearanceLarge" />
                
            <!-- <com.nabancard.ui.view.PreventCursorPositionEditText -->
            <EditText
                android:id="@+id/price"
                style="@style/EditTextBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/image"
                android:inputType="numberDecimal"
                android:text="@string/default_money"
                android:textSize="40.0sp" >

                <requestFocus />
            </EditText>
            <!-- </com.nabancard.ui.view.PreventCursorPositionEditText> -->
        </RelativeLayout>

        <TextView
            android:id="@+id/itemNameLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageWrapper"
            android:layout_marginTop="10.0dip"
            android:text="@string/itemname"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/itemName"
            style="@style/EditTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemNameLable"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <TextView
            android:id="@+id/descriptionLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemName"
            android:layout_marginTop="10.0dip"
            android:text="@string/description"
            android:textAppearance="?android:textAppearanceSmall" />

        <EditText
            android:id="@+id/description"
            style="@style/EditTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionLable"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="5"
            android:minLines="5" />

        <TextView
            android:id="@+id/receiptMessageLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="10.0dip"
            android:text="@string/receipt_message"
            android:textAppearance="?android:textAppearanceSmall" />

        <EditText
            android:id="@+id/receiptMessage"
            style="@style/EditTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/receiptMessageLable"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="5"
            android:minLines="5" />

        <TextView
            android:id="@+id/quantityTextLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/receiptMessage"
            android:layout_marginTop="10.0dip"
            android:text="@string/quantity_in_cart"
            android:textAppearance="?android:textAppearanceSmall" />

        <EditText
            android:id="@+id/quantity"
            style="@style/EditTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityTextLable"
            android:hint="@string/disabled"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            android:id="@+id/categoryLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:layout_marginTop="10.0dip"
            android:text="@string/category"
            android:textAppearance="?android:textAppearanceSmall" />

        <AutoCompleteTextView
            android:id="@+id/category"
            style="@style/EditTextBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoryLable"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="2"
            android:minLines="2" />

        <TextView
            android:id="@+id/tagsLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_marginTop="10.0dip"
            android:text="@string/tags"
            android:textAppearance="?android:textAppearanceSmall" />

        <!-- <com.nabancard.ui.view.chips.ChipsEditTextView  -->
        <EditText
            android:id="@+id/tags" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:maxLines="5" 
            android:minLines="5" 
            android:layout_below="@id/tagsLable" 
            android:inputType="textCapWords" 
            style="@style/EditTextBackground" />

        <RelativeLayout
            android:id="@+id/taxableWrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tags"
            android:layout_marginTop="20.0dip" >

            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/taxable" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />

            <!-- <com.nabancard.ui.view.SwitchOrange -->
            <!-- <Switch
                android:id="@+id/taxable"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" /> -->

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addToInventoryWrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taxableWrapper"
            android:layout_marginTop="20.0dip" >

            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/addinventory" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />

            <!-- <com.nabancard.ui.view.SwitchOrange -->
            <!-- <Switch
                android:id="@+id/addInventory"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" /> -->

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>