<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/tablet"
    android:padding="20.0dip"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:src="@drawable/logo_launch_std"
        android:scaleType="fitCenter"
        android:layout_weight="0.3"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Disclaimer:Development demo use only under authorization."
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/red"
        />
    <EditText
        android:textAppearance="?android:textAppearanceLarge"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/username_editText"
        android:paddingTop="5.0dip"
        android:paddingBottom="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:hint="@string/email"
        android:layout_weight="0.1"
        android:inputType="textEmailAddress"/>
    <EditText
        android:textAppearance="?android:textAppearanceLarge"
        android:textColorHint="@android:color/darker_gray"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/password_editText"
        android:paddingTop="5.0dip"
        android:paddingBottom="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:hint="@string/password"
        android:layout_weight="0.1"
        android:inputType="textPassword"/>
    <ImageButton
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/mainsignin"
        android:background="@drawable/generic_button_selector"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginTop="10.0dip"
        android:src="@drawable/proceed"
        android:scaleType="fitCenter"
        android:layout_weight="0.1"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5.0dip"
        android:paddingBottom="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.15">
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="0.33"/>
        <Button
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:id="@+id/testdrive"
            android:background="@drawable/generic_gray_button_selector"
            android:padding="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:text="@string/testdrive"
            android:drawableLeft="@drawable/ic_launch_setting_testdrive"
            android:onClick="onClick"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="0.33"/>
    </LinearLayout>
    <TextView
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_orange"
        android:id="@+id/update_credentials"
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:text="@string/update_credentials"
        android:shadowColor="#ffffffff"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:layout_weight="0.05"/>
    <TextView
        android:textColor="@color/text_orange"
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:text="@string/forgotten_password"
        android:shadowColor="#ffffffff"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:layout_weight="0.05"/>
    <RelativeLayout
        android:id="@+id/mainsignup"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.05">
        <TextView
            android:id="@+id/here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_signup"
            android:shadowColor="#ffffffff"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"/>
        <TextView
            android:textColor="@color/text_orange"
            android:paddingLeft="3.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here"
            android:shadowColor="#aaffffff"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:layout_toRightOf="@id/here"
            android:layout_alignBottom="@id/here"/>
    </RelativeLayout>
</LinearLayout>
