<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
        android:gravity="right"
        android:text="SGD0.00"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.britesky.ipos.handwriting.FingerDrawView
        android:id="@+id/draw_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/agreeToSignPrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:gravity="left"
        android:text="@string/AgreeToSignPrompt"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="10dip"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_margin="3dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_clear"
            style="@style/green_button"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/green_button_selector"
            android:text="@string/Clear" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/green_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/green_button_selector"
            android:text="@string/Confirm" />
    </RelativeLayout>

</LinearLayout>