<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_anim_scanbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lv_indicator_BTPOS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#FFA0A0A0"
        android:dividerHeight="1dp"
        android:listSelector="#00FFFFFF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none"
        android:visibility="gone" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan_bt_device" />

        <Button
            android:id="@+id/doTradeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/check_card" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/disconnect" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/device_swipe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:editable="false"
                android:gravity="center" />

            <EditText
                android:id="@+id/statusEditText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:editable="false" />

            <ImageButton
                android:id="@+id/action"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/generic_button_selector"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/proceed" 
                android:visibility="gone"
                android:layout_marginBottom="15dip"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>